# QGIS

./: .travis.yml
.github/workflows/: mingw64.yml
i18n/: CMakeLists.txt
ms-windows/mxe/: build-mxe.sh
src/3d/: CMakeLists.txt  qgs3dexportobject.cpp  qgs3dexportobject.h  qgs3dmapexportsettings.h  qgs3dmapscene.cpp  qgs3dsceneexporter.cpp  qgs3dsceneexporter.h
src/analysis/: CMakeLists.txt
src/app/: CMakeLists.txt  qgisapp.cpp  qgisapp.h  qgsappbrowserproviders.h  qgsappcoordinateoperationhandlers.h  qgsapplayertreeviewmenuprovider.cpp  qgsapplayertreeviewmenuprovider.h  qgsappwindowmanager.h  qgsbookmarks.h  qgsgeometryvalidationdock.h  qgsgeometryvalidationmodel.h  qgsgeometryvalidationservice.h  qgsguivectorlayertools.h  qgslayertreeviewbadlayerindicator.h  qgslayertreeviewembeddedindicator.h  qgslayertreeviewfilterindicator.h  qgslayertreeviewindicatorprovider.h  qgslayertreeviewmemoryindicator.h  qgslayertreeviewnocrsindicator.h  qgslayertreeviewnonremovableindicator.h  qgsmapthemes.cpp  qgsmaptooladdfeature.cpp  qgsmaptooladdfeature.h  qgsmaptoolcircle2tangentspoint.h  qgsmaptoolcircle3tangents.h  qgsmaptoolselectionhandler.h  qgsrecentprojectsitemsmodel.h  qgsvectorlayerdigitizingproperties.h
src/core/: CMakeLists.txt  qgsdiagramrenderer.h  qgsfeaturepickermodelbase.cpp  qgsgml.cpp  qgsgml.h  qgsmaprenderertask.cpp  qgsogcutils.cpp  qgsvectorlayereditbuffer.cpp
src/gui/: CMakeLists.txt  qgscurveeditorwidget.cpp  qgsgradientcolorrampdialog.cpp  qgshistogramwidget.cpp  qgsmapcanvas.cpp
src/python/: CMakeLists.txt  qgspythonutilsimpl.cpp
(+70 files in other folders)
